# image-to-editable-ppt-skill

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  README_en.md  README_ko.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: README.md  design.md  faq.md  index.html  installation.md  prompts.md  quickstart.md  workflow.md
docs/en/: README.md  _sidebar.md  design.md  faq.md  installation.md  prompts.md  quickstart.md  workflow.md
docs/ko/: README.md  _sidebar.md  design.md  faq.md  installation.md  prompts.md  quickstart.md  workflow.md
editppt/: cli.py
editppt/runtime/: _page_artifacts.py  configure_image_backend.py  deck_run_state.py  image_gen.py  main.py  process_asset_sheet.py  queue_page_repairs.py  record_imagegen_result.py  record_page_dispatch.py  record_page_result.py  record_sample_page.py  remove_chroma_key.py  runtime_env.py  split_alpha_components.py  validate_pptx.py
skills/image-to-editable-ppt/: SKILL.md
skills/image-to-editable-ppt/agents/: openai.yaml
skills/image-to-editable-ppt/prompts/: imagegen-asset-sheet.md  imagegen-clean-base.md  imagegen-repair.md  page-repair-worker.md  page-worker.md
skills/image-to-editable-ppt/references/: architecture.md  cli-contracts.md  cli-helper.md  image-backend-integration.md  imagegen-integration.md  manifest-schema.md  page-decision-tree.md  qa-rubric.md  repair-policy.md  (+5 more)
tests/: test_dispatch_concurrency.py  test_formula_renderer.py  test_hybrid_pptx.py  test_multi_agent_backend.py  test_page_hints.py  test_quality_contracts.py  test_script_inventory.py  test_slide_layout.py
(+29 files in other folders)
