[project]
name = "image-to-editable-ppt"
version = "0.1.0"
description = "Convert visual slide inputs into object-level editable PowerPoint decks."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "PyMuPDF>=1.24.0",
  "Pillow>=10.0.0",
  "openai>=2.0.0",
  "PyYAML>=6.0.0",
]

[project.scripts]
editppt = "editppt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["editppt"]

[tool.hatch.build]
exclude = [
  "**/.DS_Store",
  "**/__pycache__",
  "output",
  "skills/image-to-editable-ppt/.venv",
]

[tool.hatch.build.targets.wheel.force-include]
"skills/image-to-editable-ppt" = "editppt/skill"
